# laboratorium_5

./: CMakeLists.txt  całkaWyniki  pthreads_suma.c  pthreads_suma_origin.c  wyniki.txt  wyniki2.txt  wynikiCałkaRównolegle.txt  zad1.c
